--- a/mods/emi.pw.toml
+++ b/mods/emi.pw.toml
@@ -1,6 +1,6 @@
 name = "EMI"
 filename = "emi-1.1.3+1.19.2+fabric.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/fRiHVvU7/versions/oco3Ru0n/emi-1.1.3%2B1.19.2%2Bfabric.jar"
