--- a/mods/rei.pw.toml
+++ b/mods/rei.pw.toml
@@ -1,6 +1,6 @@
 name = "Roughly Enough Items (REI)"
 filename = "RoughlyEnoughItems-9.1.682-fabric.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/nfn13YXA/versions/k7eKKUx1/RoughlyEnoughItems-9.1.682-fabric.jar"
