--- a/mods/dynamic-fps.pw.toml
+++ b/mods/dynamic-fps.pw.toml
@@ -1,13 +1,13 @@
 name = "Dynamic FPS"
-filename = "dynamic-fps-3.4.2+minecraft-1.19.0-fabric.jar"
+filename = "dynamic-fps-3.4.2+minecraft-1.19.0-quilt.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/khb32G0k/dynamic-fps-3.4.2%2Bminecraft-1.19.0-fabric.jar"
+url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/lfIMkupj/dynamic-fps-3.4.2%2Bminecraft-1.19.0-quilt.jar"
 hash-format = "sha1"
-hash = "1e93eb5cb58e54aa85db639264fe46df11a9f4da"
+hash = "c6f27c4243360fa2a044fda6c627d15d5ca45b69"
 
 [update]
 [update.modrinth]
 mod-id = "LQ3K71Q1"
-version = "khb32G0k"
+version = "lfIMkupj"
