--- a/mods/terra.pw.toml
+++ b/mods/terra.pw.toml
@@ -1,13 +1,13 @@
 name = "Terra"
-filename = "Terra-fabric-6.2.1-BETA+358e09d05.jar"
+filename = "Terra-quilt-6.2.1-BETA+358e09d05.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/FIlZB9L0/versions/PKGL45fm/Terra-fabric-6.2.1-BETA%2B358e09d05.jar"
+url = "https://cdn.modrinth.com/data/FIlZB9L0/versions/BMKdpZ8z/Terra-quilt-6.2.1-BETA%2B358e09d05.jar"
 hash-format = "sha1"
-hash = "3ba8eb9b65860384539a0638431fbf95808f5158"
+hash = "3f5b2b9b3eb7e0a4e8e3940f3850a86953ef72c8"
 
 [update]
 [update.modrinth]
 mod-id = "FIlZB9L0"
-version = "PKGL45fm"
+version = "BMKdpZ8z"
