--- a/mods/xaeros-world-map.pw.toml
+++ b/mods/xaeros-world-map.pw.toml
@@ -1,16 +1,16 @@
 name = "Xaero's World Map"
-filename = "XaerosWorldMap_1.37.8_Fabric_1.19.1.jar"
+filename = "XaerosWorldMap_1.38.1_Fabric_1.19.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/NcUtCpym/versions/MGnsRoAP/XaerosWorldMap_1.37.8_Fabric_1.19.1.jar"
+url = "https://cdn.modrinth.com/data/NcUtCpym/versions/q81YjdCr/XaerosWorldMap_1.38.1_Fabric_1.19.1.jar"
 hash-format = "sha1"
-hash = "a6692431f8e11bc8dba74ef26771d8c85a9f12da"
+hash = "af0d1c53f76ce259f6cb846cae8c3d3206de19ed"
 
 [update]
 [update.modrinth]
 mod-id = "NcUtCpym"
-version = "MGnsRoAP"
+version = "q81YjdCr"
 
 [option]
 optional = true
