--- a/mods/xaeros-minimap.pw.toml
+++ b/mods/xaeros-minimap.pw.toml
@@ -1,16 +1,16 @@
 name = "Xaero's Minimap"
-filename = "Xaeros_Minimap_24.0.2_Fabric_1.19.1.jar"
+filename = "Xaeros_Minimap_24.0.3_Fabric_1.19.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/1bokaNcj/versions/xgO8iEoo/Xaeros_Minimap_24.0.2_Fabric_1.19.1.jar"
+url = "https://cdn.modrinth.com/data/1bokaNcj/versions/TgVPhHX1/Xaeros_Minimap_24.0.3_Fabric_1.19.1.jar"
 hash-format = "sha1"
-hash = "108dda09e6a6624139bf158db0ab5084d418cf92"
+hash = "e78a9859237af4d7b39f5d00c8d6746e5f8f3a99"
 
 [update]
 [update.modrinth]
 mod-id = "1bokaNcj"
-version = "xgO8iEoo"
+version = "TgVPhHX1"
 
 [option]
 optional = true
