--- a/mods/create-utilities.pw.toml
+++ b/mods/create-utilities.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Utilities"
-filename = "createutilities-0.2.0+1.19.2.jar"
+filename = "createutilities-0.3.0+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/PRHeWeBs/versions/bIal9jD5/createutilities-0.2.0%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/PRHeWeBs/versions/KsA6NKVL/createutilities-0.3.0%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "dab08ef3f07ff7d3b77e4e3c70f7fa4b357761c6"
+hash = "e620eb2137d918600b2a060e94b8e2030529aaff"
 
 [update]
 [update.modrinth]
 mod-id = "PRHeWeBs"
-version = "bIal9jD5"
+version = "KsA6NKVL"
