--- a/mods/open-parties-and-claims.pw.toml
+++ b/mods/open-parties-and-claims.pw.toml
@@ -1,13 +1,13 @@
 name = "Open Parties and Claims"
-filename = "open-parties-and-claims-fabric-1.19.2-0.20.4.jar"
+filename = "open-parties-and-claims-fabric-1.19.2-0.22.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/gF3BGWvG/versions/1w3amfUm/open-parties-and-claims-fabric-1.19.2-0.20.4.jar"
+url = "https://cdn.modrinth.com/data/gF3BGWvG/versions/mt8qiUe8/open-parties-and-claims-fabric-1.19.2-0.22.0.jar"
 hash-format = "sha1"
-hash = "56b49d6c7fb1a6f8e73c52d7b8ad23e9e6a3c77e"
+hash = "99e13795dcd75eb0e912cf5913e49579d87bc78d"
 
 [update]
 [update.modrinth]
 mod-id = "gF3BGWvG"
-version = "1w3amfUm"
+version = "mt8qiUe8"
