--- a/mods/polymorph.pw.toml
+++ b/mods/polymorph.pw.toml
@@ -1,13 +1,13 @@
 name = "Polymorph"
-filename = "polymorph-fabric-0.46.5+1.19.2.jar"
+filename = "polymorph-fabric-0.46.6+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/tagwiZkJ/versions/8zhVFKEL/polymorph-fabric-0.46.5%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/tagwiZkJ/versions/Mq4la1Hv/polymorph-fabric-0.46.6%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "51c64d49ad3fd92c75f7b961e92dbd3b950bc6e5"
+hash = "8517e8ef9e272edfd9552d6d2c04e9faf4ae6831"
 
 [update]
 [update.modrinth]
 mod-id = "tagwiZkJ"
-version = "8zhVFKEL"
+version = "Mq4la1Hv"
