--- a/mods/supplementaries.pw.toml
+++ b/mods/supplementaries.pw.toml
@@ -1,13 +1,13 @@
 name = "Supplementaries"
-filename = "supplementaries-1.19.2-2.4.20-fabric.jar"
+filename = "supplementaries-1.19.2-2.4.21-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/fFEIiSDQ/versions/VNwz9Avv/supplementaries-1.19.2-2.4.20-fabric.jar"
+url = "https://cdn.modrinth.com/data/fFEIiSDQ/versions/VQx7vGrB/supplementaries-1.19.2-2.4.21-fabric.jar"
 hash-format = "sha1"
-hash = "33ef4b55d374b78023235014cc065e232218d929"
+hash = "fae604ee5b0add35616a999506ed638c5b229053"
 
 [update]
 [update.modrinth]
 mod-id = "fFEIiSDQ"
-version = "VNwz9Avv"
+version = "VQx7vGrB"
