--- a/mods/travelersbackpack.pw.toml
+++ b/mods/travelersbackpack.pw.toml
@@ -1,13 +1,13 @@
 name = "Traveler's Backpack"
-filename = "travelers-backpack-1.19.2-8.2.33.jar"
+filename = "travelersbackpack-fabric-1.19.2-8.2.34.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/rlloIFEV/versions/qwaY03Wi/travelers-backpack-1.19.2-8.2.33.jar"
+url = "https://cdn.modrinth.com/data/rlloIFEV/versions/gnjoUu2f/travelersbackpack-fabric-1.19.2-8.2.34.jar"
 hash-format = "sha1"
-hash = "a1703f024f77bbc03274a0772ab14be545c426ae"
+hash = "4fe9350eb01ed57c70d902e6bd5389dc6aaa4558"
 
 [update]
 [update.modrinth]
 mod-id = "rlloIFEV"
-version = "qwaY03Wi"
+version = "gnjoUu2f"
