--- a/mods/xaeroplus.pw.toml
+++ b/mods/xaeroplus.pw.toml
@@ -1,16 +1,16 @@
 name = "XaeroPlus"
-filename = "XaeroPlus-2.3+fabric-1.19.2-WM1.38.1-MM24.0.2.jar"
+filename = "XaeroPlus-2.6+fabric-1.19.2-WM1.38.1-MM24.0.3.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/EnPUzSTg/versions/AMwar60p/XaeroPlus-2.3%2Bfabric-1.19.2-WM1.38.1-MM24.0.2.jar"
+url = "https://cdn.modrinth.com/data/EnPUzSTg/versions/nv7nRqyq/XaeroPlus-2.6%2Bfabric-1.19.2-WM1.38.1-MM24.0.3.jar"
 hash-format = "sha1"
-hash = "038097de50ddf73a8362af30c03958dcd7b53a42"
+hash = "e4ebc78486efd9c06f0e3249e9512140541445e9"
 
 [update]
 [update.modrinth]
 mod-id = "EnPUzSTg"
-version = "AMwar60p"
+version = "nv7nRqyq"
 
 [option]
 optional = true
